# crocodile_lkm

./: .gitignore  CMakeLists.txt  Makefile  README.md  croc_load.sh
cmake/: build_flags.cmake  main.cmake
drivers/croc/: CMakeLists.txt  logging.h  module_main.c  params.h  types.h  version.h
drivers/croc/ctrl/: ctrl.h  ioctl.h
drivers/croc/ctrl/details/: hash_tbl.c  hash_tbl.h  ioctl_module.c  ioctl_module.h  ioctl_proc.c  ioctl_proc.h  module_hide.c  parser_str_cmd.c  parser_str_cmd.h  pid_utils.c  pid_utils.h  proc.c  proc.h
drivers/croc/device/: device.h  params.h  types.h
drivers/croc/device/details/: cdev_utils.c  cdev_utils.h  device.c  file_ops.c  file_ops.h  hash_tbl.c  hash_tbl.h  ioctl_cmd.c  ioctl_cmd.h  parser.c  parser.h  parser_str_cmd.c  parser_str_cmd.h
drivers/croc/logging/: logger.h  severity_level.h
drivers/croc/logging/details/: log_impl.h  log_stubs.h  severity_level_impl.c  severity_level_impl.h
drivers/croc/proc/: module_hide.h  proc.h
drivers/croc/proc/details/: file_ops.c  file_ops.h  module_hide.c  proc.c
drivers/croc/systbl/: hook_funcs.h  hooked_funcs.h  syscall_utils.h  systbl.h  types.h
drivers/croc/systbl/details/: dirent_hack.h  find_table.c  find_table.h  hacked_funcs.c  hacked_funcs.h  hook_funcs.c  hooked_funcs.c  memory_protection.h  syscall_utils.c  syscall_utils.h
drivers/crok/: CMakeLists.txt  logging.h  module_main.c  types.h  version.h
drivers/crok/ctrl/: ctrl.h  ioctl.h
drivers/crok/ctrl/details/: hash_tbl.c  hash_tbl.h  ioctl_module.c  ioctl_module.h  ioctl_proc.c  ioctl_proc.h  pid_utils.c  pid_utils.h
drivers/crok/device/: device.h  params.h
drivers/crok/device/details/: cdev_utils.c  cdev_utils.h  device.c  file_ops.c  file_ops.h  parser_str_cmd.c  (+1 more)
drivers/crok/logging/: logger.h  severity_level.h
drivers/crok/proc/: proc.h
drivers/crok/systbl/: systbl.h
install/: lkm_load.sh
libs/progopts/: CMakeLists.txt  progopts.cpp  progopts.h
src/croc_client/: CMakeLists.txt  main.cpp
src/crok_ioctl/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_fixture.sh  ut_croc.sh  ut_crok.sh
(+14 files in other folders)
